# moleql-patterns

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: license_header.py.txt
src/moleql_patterns/: __init__.py  api_operation.py  task.py  task_data.py
src/moleql_patterns/commands/: __init__.py  api_operation.py  task.py  task_data.py
src/moleql_patterns/contracts/: __init__.py  task.py  task_data.py
src/moleql_patterns/structural/: __init__.py  entity.py  repository.py
tests/: test_imports.py
tests/moleql_patterns/: _api_operation_shared.py  test_api_operation.py  test_api_operation_async.py  test_api_operation_module.py  test_api_operation_sync.py  test_task_data_module.py  test_task_module.py
tests/moleql_patterns/commands/: _api_operation_shared.py  _task_shared.py  test_api_operation_async.py  test_api_operation_sync.py  test_task.py  test_task_data.py
tests/moleql_patterns/contracts/: _api_operation_shared.py  _task_shared.py  test_api_operation_async.py  test_api_operation_sync.py  test_task.py  test_task_data.py
tests/moleql_patterns/structural/: test_entity.py  test_repository.py
tools/: check_license_headers.py  release.py  version.py
