[project]
name = "moleql-patterns"
version = "1.0.0"
description = "A lightweight Python library providing reusable base classes and design patterns for decoupled application architecture, built on Pydantic and inspired by FastAPI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Pedro Guzmán" }]
keywords = ["architecture", "patterns", "pydantic", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/OneTesseractInMultiverse/moleql-patterns"
Repository = "https://github.com/OneTesseractInMultiverse/moleql-patterns"
Issues = "https://github.com/OneTesseractInMultiverse/moleql-patterns/issues"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moleql_patterns"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
-q
--strict-config
--strict-markers
--cov=src/moleql_patterns
--cov-report=term-missing
--cov-report=xml
--cov-fail-under=90
"""
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["moleql_patterns"]
parallel = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
